<resources>
    <string name="app_name">Rezsim</string>

    <string name="ok">OK</string>
    <string name="cancel">Mégse</string>
    <string name="yes">Igen</string>

    <string name="fab_save">Mentés</string>
    <string name="fill_all_mandatory">Töltsön ki minden pirossal jelölt kötelező mezőt!</string>

    <string name="payment_value">%s Ft</string>
    <string name="electricity_value">%d kWh</string>
    <string name="gas_value">%d m3</string>

    <string name="login_title">BEJELENTKEZÉS</string>
    <string name="login_registration_title">REGISZTRÁCIÓ</string>
    <string name="login_description">A folytatáshoz jelentkezzen be:</string>
    <string name="login_registration_description">A folytatáshoz regisztráljon:</string>
    <string name="login_email_title">E-mail</string>
    <string name="login_email_hint">EMAIL</string>
    <string name="login_password_title">Jelszó</string>
    <string name="login_password_again_title">Jelszó még egyszer</string>
    <string name="login_password_hint">JELSZÓ</string>
    <string name="login_button">BEJELENTKEZÉS</string>
    <string name="login_button_registration">REGISZTRÁCIÓ</string>
    <string name="login_login_failed">Ne sikerült a művelet. Kérem próbálja újra!</string>
    <string name="login_login_invalid_credidental">Érvénytelen email / jelszó. A bejelentkezés sikertelen.</string>
    <string name="login_login_passwords_no_match">A jelszavak nem egyeznek. Próbálja újra!</string>
    <string name="login_login_email_exists">Ez az email cím már foglalt. Próbálja újra!</string>
    <string name="login_mode_login_description">Nincs még fiókja?</string>
    <string name="login_mode_login_button">Regisztráció</string>
    <string name="login_mode_registration_description">Már van fiókja?</string>
    <string name="login_mode_registration_button">Bejelentjezés</string>

    <string name="household_title_change">Háztartás szerkesztése</string>
    <string name="household_title_create">Háztartás létrehozása</string>
    <string name="household_name_title">Megnevezés</string>
    <string name="household_meters_title">Jelenlegi óraállások</string>
    <string name="household_electriciy_title">Áram</string>
    <string name="household_usage_title">Felhasználás módja</string>
    <string name="household_pricing_type_a_title">Felhasználási hely árszabása (A)</string>
    <string name="household_pricing_type_b_title">Felhasználási hely árszabása (B)</string>
    <string name="household_gas_title">Gáz</string>
    <string name="household_heating_value_title">Fűtőérték</string>
    <string name="household_children_count_title">Gyermekek száma</string>
    <string name="household_children_count_description">A 3 gyermekesek évi 600 (gyermekenként 200) köbméterrel több, összesen évi 2329 köbméter gázt fogyaszthatnak rezsicsökkentett áron, és minden újabb gyereknél további évi 300 köbméterrel nő a kedvezményes fogyasztás lehetősége.</string>
    <string name="household_no_household_yet">Még nem vitte fel háztartásának adatait.\nTöltse ki a mezőket, majd nyomja meg a mentés gombot!</string>
    <string name="household_item_select">Kérem Válasszon!</string>
    <string name="household_usage_mode_0">Lakossági</string>
    <string name="household_pricing_mode_a_0">A1: Általános, egy zónaidős</string>
    <string name="household_pricing_mode_b_0">B alap: időszakos(vezérelt, különmért)</string>
    <string name="household_pricing_mode_h_0">H tarifa</string>
    <string name="household_gas_heating_0">34.2 MJ</string>
    <string name="household_gas_heating_1">30 MJ</string>
    <string name="household_gas_heating_2">32 MJ</string>
    <string name="household_gas_heating_3">35 MJ</string>
    <string name="household_gas_heating_4">38 MJ</string>
    <string name="household_gas_heating_5">40 MJ</string>
    <string name="household_message_unsuccesfull_save">Nem sikerült az adatok mentése.</string>
    <string name="household_message_unsuccesfull_refresh">Nem sikerült frissíteni az adatokat.</string>
    <string name="household_message_go_back_title">Visszalépés</string>
    <string name="household_message_go_back">Biztosan vissza akar lépni? A nem mentett változtatások el fognak veszni.</string>

    <string name="main_header_title">Rezsim</string>
    <string name="main_title">Háztartások</string>
    <string name="main_new_household">Új háztartás</string>
    <string name="main_spinner_household_prompt">Válasszon háztartást</string>
    <string name="main_read">Leolvasok</string>
    <string name="main_title_last_read">Utolsó óraállás</string>
    <string name="main_title_last_consumption">Utolsó fogyasztás</string>
    <string name="main_title_electricity">Áram</string>
    <string name="main_title_gas">Gáz</string>
    <string name="main_no_measurement">Még nem történt leolvasás</string>
    <string name="main_message_title_exit">Kilépés</string>
    <string name="main_message_exit">Biztosan be akarja zárni az alkalmazást?</string>

    <string name="dialog_user_user_title">Bejelentkezve:</string>
    <string name="dialog_user_logout">Kijelentkezés</string>

    <string name="dialog_meter_read_title">Óraállás rögzítés</string>
    <string name="dialog_meter_read_utility_electricity">villanyóráról</string>
    <string name="dialog_meter_read_utility_gas">gázóráról</string>
    <string name="dialog_meter_read_message">Adja meg a %s leolvasott értéket.</string>
    <string name="dialog_meter_read_int_message">Csak az egész értéket írja be!</string>
    <string name="dialog_meter_date">Dátum:</string>
    <string name="dialog_meter_value">Óraállás:</string>
    <string name="dialog_meter_read_last_value">Utolsó óraállás: %s</string>
    <string name="dialog_meter_read_possible_values">Lehetséges óraállás: %s - %s</string>
    <string name="dialog_meter_read_comment_hint">Megjegyzés</string>
    <string name="dialog_meter_save">Mentés</string>
    <string name="dialog_meter_small_value_error">A megadott érték kisebb, mint az utóló óraállás!</string>
    <string name="dialog_meter_small_possible_value_error">A megadott érték kisebb, mint a lehetséges óraállás!</string>
    <string name="dialog_meter_large_possible_value_error">A megadott érték nagyobb, mint a lehetséges óraállás!</string>
    <string name="dialog_meter_message_unsuccesfull_save">Nem sikerült az adatok mentése.</string>
    <string name="dialog_meter_message_unsuccesfull_refresh">Nem sikerült frissíteni az adatokat.</string>

    <string name="overview_header_title_electricity">Áram áttekintés</string>
    <string name="overview_header_title_gas">Gáz áttekintés</string>
    <string name="overview_month_0">Jan</string>
    <string name="overview_month_1">Febr</string>
    <string name="overview_month_2">Márc</string>
    <string name="overview_month_3">Ápr</string>
    <string name="overview_month_4">Máj</string>
    <string name="overview_month_5">Jún</string>
    <string name="overview_month_6">Júl</string>
    <string name="overview_month_7">Aug</string>
    <string name="overview_month_8">Szept</string>
    <string name="overview_month_9">Okt</string>
    <string name="overview_month_10">Nov</string>
    <string name="overview_month_11">Dec</string>
    <string name="overview_payment">Összesen</string>
    <string name="overview_payment_under_limit">Kedvezményes\n(átlag alatti)</string>
    <string name="overview_payment_above_limit">Piaci\n(átlag feletti)</string>
    <string name="overview_meters">Leolvasások</string>
    <string name="overview_consumption">Fogyasztás</string>
    <string name="overview_meter">Leolvasás</string>
    <string name="overview_calculation_error">Nem sikerült lekérni a fogyasztási adatokat!</string>
    <string name="overview_price_warning">Figyelem! Az árak tájékoztató jellegűek.</string>

    <string name="footer_no_meter">Még nincs megjeleníthető óraállás!</string>


</resources>