<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@drawable/logo"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/page_margin">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/btAddHousehold"
                app:layout_constraintBottom_toBottomOf="@id/btAddHousehold"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size_large"
                android:textStyle="bold"
                android:text="@string/main_title"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btAddHousehold"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:background="@drawable/statelist_button_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/main_new_household"
                android:drawableStart="@drawable/ic_add"
                android:drawablePadding="8dp"
                android:textColor="@color/button_text_color"
                android:drawableTint="@color/button_text_color"
                android:paddingHorizontal="16dp"
                android:backgroundTint="@color/material_grey_8"
                android:backgroundTintMode="add"/>

            <FrameLayout
                android:id="@+id/flHouseholdSelector"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btAddHousehold"
                android:layout_marginTop="16dp">

                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spHousehold"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:prompt="@string/main_spinner_household_prompt"
                    android:background="@drawable/background_spinner"
                    android:spinnerMode="dropdown"
                    android:popupBackground="@drawable/background_spinner_popup"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/text_size_edit"
                    android:gravity="start" />

            </FrameLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clElectricity"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:layout_constraintTop_toBottomOf="@id/flHouseholdSelector"
                android:layout_marginTop="16dp">


            </androidx.constraintlayout.widget.ConstraintLayout>



        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>